--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@faststore/core": "3.0.39",
     "next": "^13.5.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@nizza/utils": "^0.3.10"
   },
   "devDependencies": {
     "@cypress/code-coverage": "^3.12.1",
